msf-chn-modify-customer-password/k8s/Deployment-msf-chn-modify-customer-password.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msf-chn-modify-customer-passwordservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msf-chn-modify-customer-passwordservice
  template:
    metadata:
      labels:
        app: msf-chn-modify-customer-passwordservice
        deployment: msf-chn-modify-customer-passwordservice-v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: msf-chn-modify-customer-passwordservice-sa
      containers:
        - name: msf-chn-modify-customer-passwordservice
          image: 345594594011.dkr.ecr.us-east-1.amazonaws.com/modify-customer-password:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          # livenessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/health
          #   initialDelaySeconds: 90
          #   periodSeconds: 5
          # readinessProbe:
          #   httpGet:
          #     port: 8080
          #     path: /actuator/health
          #   initialDelaySeconds: 15
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
