msf-chn-modify-customer-password/k8s/Service-msf-chn-modify-customer-password.yaml
apiVersion: v1
kind: Service
metadata:
  name: msf-chn-modify-customer-passwordservice
  labels:
    app: msf-chn-modify-customer-passwordservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: msf-chn-modify-customer-passwordservice
