msf-chn-modify-customer-password/k8s/virtualservice-msf-chn-modify-customer-password.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: msf-chn-modify-customer-passwordservice-routes
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: "/api/msf-chn-modify-customer-passwordservice/"
      route:
        - destination:
            host: msf-chn-modify-customer-passwordservice.default.svc.cluster.local
            port:
              number: 8080
      timeout: 4s
